<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">iRemote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_remote">Remote</string>
    <string name="title_activity_account_settings">Add Account</string>
    <string name="func_not_supported">Function not supported by selected control panel</string>
    <string name="select_contact_phone_number_and_type">Select number</string>
    <string name="List_is_full">List is full, Please delete/modify existing accounts</string>
    <string name="shaula720">SHAULA 720</string>
    <string name="shaula710">SHAULA 710</string>
    <string name="shaulaV9">SHAULA V9</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="get_set_extra">extra</string>
    <string name="no_record_in_accounts">No records found.Please add an account</string>
    <string name="site_name_and_number_cant_be">1- Site Name can\'t be Empty\n2- Number should be 6 chars or more</string>
    <string name="name_cant_be_empty">1- Site Name can\'t be Empty</string>
    <string name="number_cant_be_less_than">1- Number should be 6 chars or more</string>
    <string name="double_press_to_quit">press  again to exit</string>
    <string name="feature_not_available">Feature not supported in selected control panel</string>
    <string name="pass_cant_be_empty">password can\'t be empty</string>
    <string name="num_starts_withPlus">Number should be at least 6 chars long, starting with +</string>
    <string name="no_data_to_update">No data to update</string>
    <string name="done_label">Done</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="Tap_to_set_timer">TAP TO SET</string>
    <string name="settings_for_timer">SETTINGS FOR TIMER</string>
    <string name="defaultString">DEFAULT</string>
    <string name="forced_on">ON</string>
    <string name="forced_off">OFF</string>
    <string name="auto_mode">AUTO MODE</string>
    <string name="man_mode">MANUAL MODE</string>
    <string name="set_on_time">SET ON TIME</string>
    <string name="set_off_time">SET OFF TIME</string>
    <string name="set_on_and_off_time">set both ON and OFF time or disable auto mode</string>
    <string name="to_set_time_select_auto"></string>
    <string name="to_set_time_select_aut">enable AUTO mode to change time</string>
    <string name="country_code_failed">failed to get country code, make sure your SIM card is regestered to the network</string>
    <string name="Tit_about">ABOUT SMS REMOTE</string>
    <string name="Tit_add_account">ADD/MODIFY ACCOUNT</string>
    <string name="Tit_List">ACCOUNTS LIST</string>
    <string name="Tit_Areas">ZONE SETTINGS</string>
    <string name="Tit_timers">TIMER SETTINGS</string>
    <string name="Tit_users">SETTINGS</string>
    <string name="Tit_help">HELP</string>
    <string name="select_zone">SELECT ZONE</string>
    <string name="title_remote">REMOTE</string>
    <string name="ip_server">192.168.1.3</string>
    <string name="Tit_launch_page">ADD ACCOUNT</string>
    <string name="zone_1">ZONE 1</string>
    <string name="zone_2">ZONE 2</string>
    <string name="zone_3">ZONE 3</string>
    <string name="zone_4">ZONE 4</string>
    <string name="zone_5">ZONE 5</string>
    <string name="zone_6">ZONE 6</string>
    <string name="zone_7">ZONE 7</string>
    <string name="zone_8">ZONE 8</string>
    <string name="zone_9">ZONE 9</string>
    <string name="zone_A">ZONE A</string>
    <string name="zone_B">ZONE B</string>
    <string name="zone_C">ZONE C</string>
    <string name="zone_D">ZONE D</string>
    <string name="zone_E">ZONE E</string>
    <string name="zone_F">ZONE F</string>
    <string name="zone_G">ZONE G</string>
    <string name="enter_desired_name_for_zone">Enter desired Name for the zone</string>
    <string name="commandSvi">**#svi:</string>
    <string name="commandTail">:!!</string>
    <string name="commandDoor">**#door:</string>
    <string name="Door_Opened">Door Opened!!</string>
    <string name="Astrolabe">ASTROLABE</string>
    <string name="commandlogin">**#login:</string>
    <string name="could_not_connect">Connection Error!\nCould not connect to the board.</string>
    <string name="commandDisarm">**#darm:</string>
    <string name="commandArmA">**#arm aq:</string>
    <string name="commandArmAs">**#arm as:</string>
    <string name="commandGate">**#gate:</string>
    <string name="commandArmSS">**#arm ss:</string>
    <string name="commandArmS">**#arm sq:</string>
    <string name="Gate_Opened">Gate Opened!!</string>
    <string name="Armed_Away_scl">Armed Away Silent!!</string>
    <string name="title_activity_add_account">iRemote</string>
    <string name="desc_done_update_button">Done/Update button</string>
    <string name="desc_name_of_site">name of the Site</string>
    <string name="desc_password_box">Password</string>
    <string name="desc_user_name">user name</string>
    <string name="desc_name_of_password">Password</string>
    <string name="onlyDigits_plus">01234567890+</string>
    <string name="descCD">centerDial</string>
    <string name="desc_sureButton">SureButton</string>
    <string name="desc_Disarm">disarm Button</string>
    <string name="desc_status_button">get Status</string>
    <string name="desc_armStay">Arm Stay</string>
    <string name="desc_arm_away">Arm Away</string>
    <string name="desc_arm_stay_sil">arm stay silent</string>
    <string name="desc_open_door">Open Door</string>
    <string name="desc_arm_away_silent">arm away silent</string>
    <string name="desc_open_gate">Open Gate</string>
    <string name="demoAccount">ONLINE DEMO</string>
</resources>